# lightcrazy

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  flake.nix
assets/icons/: README.md
nix/: nixosModule.nix  package.nix
src/: lib.rs  lock.rs  main.rs  settings.rs
src/device/: mod.rs  protocol.rs  transport.rs  worker.rs
src/tray/: icon.rs  menu.rs  mod.rs  notifications.rs  utils.rs
src/ui/: app.rs  mod.rs  render.rs
